# pycommremover

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
pycommremover/: __init__.py
tests/: test_remove_comments.py
