[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = "pycommremover"
packages = ["pycommremover"]

[project]
name = "pycommremover"
version = "0.2"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"},
    {name = "Agustín Céspedes", email = "agustinces17@gmail.com"},
]
description = "Library to remove block and line comments."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT License"}
keywords = ["comment", "remover"]
readme = "README.md"

[project.urls]
repository = "https://github.com/carlosplanchon/pycommremover.git"
